@@ -8,8 +8,8 @@ import jakarta.validation.constraints.NotNull;
 import org.springframework.graphql.execution.DataFetcherExceptionResolver;
 import org.springframework.stereotype.Component;
 import reactor.core.publisher.Mono;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class GraphQLExceptionHandler implements DataFetcherExceptionResolver {
@@ -20,7 +20,7 @@ public class GraphQLExceptionHandler implements DataFetcherExceptionResolver {
             List<GraphQLError> errors = validationEx.getConstraintViolations().stream()
                     .map(violation -> GraphqlErrorBuilder.newError(env)
                             .message("Błąd walidacji " + violation.getMessage())
-                            .build()).collect(Collectors.toList());
+                            .build()).toList();
 
             return Mono.just(errors);
         }
